--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-toasts": "^3.0.6",
     "styled-components": "^5.1.1",
     "styled-icons": "^10.9.0",
     "typescript": "~3.7.2"
